crates/fec-cli/src/commands/snapshots/libfec__commands__search__tests__render_search_bar_with_spinner.snap
---
source: crates/fec-cli/src/commands/search.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌Search ⠹──────────────────────────────────────────────────────────────────────────────────────────┐"
"│❯ biden                                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
