crates/fec-cli/src/commands/snapshots/libfec__commands__search__tests__render_search_view.snap
---
source: crates/fec-cli/src/commands/search.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌Search─────────────────────────────────────────────────────────────────────────────┐┌─────────────┐"
"│❯ biden                                                                            ││ Cycle: 2024 │"
"└───────────────────────────────────────────────────────────────────────────────────┘└─────────────┘"
" Candidates (1)      Committees (1)  ⌃b  Operating Expenses (?)  ⌃e                                 "
"┌Candidate Results (1 matches)─────────────────────────────────────────────────────────────────────┐"
"│   Candidate ID  Name                                       Year   Office  State/Dist  Committee  │"
"│>> P00003392     BIDEN, JOSEPH R JR                         2020   P                   C00703975  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"     Esc quit  Tab focus  Enter select  ↑/↓ navigate  ⌃a Candidates  ⌃b Committees  ⌃e Expenses     "
