crates/fec-cli/src/commands/snapshots/libfec__commands__search__tests__render_search_view_empty.snap
---
source: crates/fec-cli/src/commands/search.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌Search─────────────────────────────────────────────────────────────────────────────┐┌─────────────┐"
"│❯                                                                                  ││ Cycle: 2024 │"
"└───────────────────────────────────────────────────────────────────────────────────┘└─────────────┘"
" Candidates (0)      Committees (0)  ⌃b  Operating Expenses (?)  ⌃e                                 "
"┌Candidate Results (start typing to search)────────────────────────────────────────────────────────┐"
"│Candidate ID  Name                                          Year   Office  State/Dist  Committee  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"     Esc quit  Tab focus  Enter select  ↑/↓ navigate  ⌃a Candidates  ⌃b Committees  ⌃e Expenses     "
